# wgrapheme

./: .clang-format  CMakeLists.txt  LICENSE  README.md
include/: wgrapheme.h
src/: wgrapheme.c  wgrapheme_categories.h  wgrapheme_data.h
test/: test_graphemebreak.c
tools/: gen_data.c
